--- a/esm_244_lab_1_key.Rmd
+++ b/esm_244_lab_1_key.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "ESM 244 Lab 1"
-author: "Allison Horst"
+author: "Priscilla Hare"
 date: "December 8, 2018"
 output: html_document
 ---
